tests/snapshots/purity_parity/purity_parity__E__29_strict_missing_main.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/29_strict_missing_main.flx
Category: E
Strict: true
Expect compile error: true

== vm command ==
$ flux --no-cache --strict examples/type_system/failing/29_strict_missing_main.flx
exit_code: 1

== jit command ==
$ flux --no-cache --strict examples/type_system/failing/29_strict_missing_main.flx --jit
exit_code: 1

== vm tuples ==
- E415 | Missing Main Function (strict) | 

== jit tuples ==
- E415 | Missing Main Function (strict) | 

== parity ==
match

== mismatch_debug ==
<none>
