tests/snapshots/purity_parity/purity_parity__E__57_strict_entry_path_parity.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/57_strict_entry_path_parity.flx
Category: E
Strict: true
Expect compile error: true

== vm command ==
$ flux --no-cache --strict examples/type_system/failing/57_strict_entry_path_parity.flx
exit_code: 1

== jit command ==
$ flux --no-cache --strict examples/type_system/failing/57_strict_entry_path_parity.flx --jit
exit_code: 1

== vm tuples ==
- E416 | Strict Function Annotation Required | 
- E425 | Unresolved Boundary Type | expression type is unresolved in strict mode

== jit tuples ==
- E416 | Strict Function Annotation Required | 
- E425 | Unresolved Boundary Type | expression type is unresolved in strict mode

== parity ==
match

== mismatch_debug ==
<none>
